--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -1,11 +1,4 @@
 
-body{
-    font-family: 'Raleway', sans-serif;
-    max-width: 1440px;
-    margin: auto;
-    padding: 0px;
-    box-sizing: border-box;
-}
 
 /* Section search */
 
@@ -18,10 +11,10 @@ body{
     border-bottom-right-radius: 10px;
 }
 
-.map-icon{
+.search-marker{
     background-color: #F2F2F2;
     padding: 15px;
-    font-size: 1.5rem;
+    font-size: 1rem;
  
 }
 
@@ -112,46 +105,79 @@ body{
 }
 
 .section-hebergement-item{
-    /* height: 280px; */
-    max-width: 250px;
+    height: 230px;
+    /* max-width: 250px; */
+    position: relative;
     background-color: white;
-    padding: 8px;
-    border-radius: 10px;
+    border-radius: 25px;
     box-shadow: 0px 0px 12px gray;
     /* object-fit: contain; */
 
 }
 
 .section-hebergement-img{
-    height: 180px;
-    width: 100%;
+    height: 130px;
+    width: 97%;
+    margin: auto;
+    margin-top: 3px;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
     object-fit: cover;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    left: 0px;
+    z-index: 50;
+}
 
+.text-hebergement{
+    height: 100px;
+    position: absolute;
+    bottom: 0;
+    right: 0px;
+    left: 0px;
+    z-index: 150;
+}
+
+.hebergemnt-text-margin{
+    margin: 4px;
+}
+
+.star-grey{
+    color: #F2F2F2;
+}
+
+.text-bold{
+    font-weight: bolder;
 }
 
 /* section populaires */
 
 #section-bloc-populaire{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-row-gap: 20px;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     background-color: #F2F2F2;
     padding: 20px;
-    border-radius: 20px;
+    border-radius: 25px;
 
 }
 
-#section-populaires{
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+.titre-populaire{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
 
-    max-width: 320px;
+.chart-line{
+    color: black;;
 }
 
 .section-populaires-item{
     display: flex;
-    max-width: 350px;
+    flex-direction: row;
+    max-width: 100%x;
     background-color: white;
     padding: 8px;
     border-radius: 10px;
@@ -183,7 +209,7 @@ body{
 
 .section-activites-items{
     background-color: #F2F2F2;
-    padding: 20px;
+    /* padding: 20px; */
     border-radius: 20px;
 
 }
@@ -192,6 +218,8 @@ body{
     height: 180px;
     width: 100%;
     object-fit: cover;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
 
 }
 
