--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -106,12 +106,10 @@
 
 .section-hebergement-item{
     height: 230px;
-    /* max-width: 250px; */
     position: relative;
     background-color: white;
     border-radius: 25px;
     box-shadow: 0px 0px 12px gray;
-    /* object-fit: contain; */
 
 }
 
@@ -154,32 +152,43 @@
 /* section populaires */
 
 #section-bloc-populaire{
+    width: 425px;
+    height: auto;
     display: flex;
+    align-items: center;
     flex-direction: column;
-    justify-content: center;
     background-color: #F2F2F2;
     padding: 20px;
     border-radius: 25px;
-
 }
 
 .titre-populaire{
     display: flex;
-    width: 100%;
+    width: 345px;
     justify-content: space-between;
     align-items: center;
 }
 
-.chart-line{
+.chart-line-color{
     color: black;;
+}
+
+#section-populaires-items{
+    display: grid;
+    grid-template-rows: 1fr 1fr 1FR;
+    grid-row-gap: 20px;
+    width: 345px;
+
 }
 
 .section-populaires-item{
     display: flex;
     flex-direction: row;
-    max-width: 100%x;
+    justify-content: center;
+    align-items: center;
+    width: 345px;
     background-color: white;
-    padding: 8px;
+    padding: 4px;
     border-radius: 10px;
     box-shadow: 0px 0px 12px gray;
 
@@ -187,11 +196,13 @@
 
 .section-populaire-texte{
     flex-direction: column;
+    width: 215px;
+    height: auto;
 }
 
 .section-populaires-img{
-    height: 180px;
-    width: 100%;
+    height: 130px;
+    width: 137px;
     object-fit: cover;
 }
 
@@ -202,24 +213,38 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-column-gap: 10px;
-    width: 100%;
-    max-width: 1900px;
     padding: 20px;
+    /* width: 1440px; */
+}
+
+.grande-section{
+}
+
+.petite-section-1{
+    /* object-fit: cover; */
+    width: 300px;
+    height: 180px;
 }
 
 .section-activites-items{
-    background-color: #F2F2F2;
-    /* padding: 20px; */
+    height: auto;
     border-radius: 20px;
+    width: 300px;
+    height: 390px;
 
 }
 
 .section-activites-images{
-    height: 180px;
-    width: 100%;
-    object-fit: cover;
+    /* object-fit: cover; */
+    width: 300px;
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
-
 }
 
+.image-fort{
+    height: 180px;
+}
+
+.image-frioul{
+    height: 100px;
+}
