--- a/css/headerstyle.css
+++ b/css/headerstyle.css
@@ -1,22 +1,28 @@
+*, ::before, ::after {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
 body{
     font-family: 'Raleway', sans-serif;
+    font-size: 16px;
     width: 1440px;
     margin: auto;
-    padding: 0px;
-    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 header{
-    display: flex;
+    display: flex;  
 }
 
 #section-navigation{
     display: grid;
     grid-template-columns: 4fr 1fr 1fr 1fr;
-    height: 100%;
-    width: 100%;
+    height: 100px;
+    width: 1340px;
     align-items: center;
-    justify-items: center;
 }
 
 #logo-reservia{
@@ -32,7 +38,6 @@ header{
 
 .hover-item,a{
     color: #0065FC;
-    margin: 0px;
 }
 
 a{
