--- a/css/headerstyle.css
+++ b/css/headerstyle.css
@@ -6,7 +6,6 @@
 body{
     font-family: 'Raleway', sans-serif;
     font-size: 16px;
-    width: 1440px;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -14,7 +13,8 @@ body{
 }
 
 header{
-    display: flex;  
+    display: flex;
+    /* max-width: 1340px;   */
 }
 
 #section-navigation{
@@ -28,9 +28,7 @@ header{
 #logo-reservia{
     display: flex;
     justify-self: flex-start;
-    align-self: baseline;
     height: 40px;
-    margin-left: 25px;
     margin-top: 15px;
 }
 
@@ -46,7 +44,8 @@ a{
 
 a:focus{
     color: grey;
-    text-decoration: overline #0065FC;
+    border-top: 2px solid #0065FC;
+    padding-top: 15px;
 }
 
 .nav-items{
