--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -1,6 +1,6 @@
 
 main{
-    width: 1340px;
+    max-width: 1340px;
 }
 /* Section search */
 
@@ -91,12 +91,13 @@ main{
 
 #section-hebergement{
     background-color: #F2F2F2;
-    padding: 0px 40px 0px 40px;
+    padding: 40px;
     border-radius: 20px;
 }
 
 #section-hebergement-items{
     display: grid;
+    padding-top: 20px;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     grid-column-gap: 20px;
@@ -135,6 +136,9 @@ main{
     right: 0px;
     left: 0px;
     z-index: 150;
+    padding: 10px;
+    color: black;
+
 }
 
 .hebergemnt-text-margin{
@@ -154,6 +158,7 @@ main{
 #section-bloc-populaire{
     width: 425px;
     height: auto;
+    padding: 40px;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -177,6 +182,8 @@ main{
     grid-template-rows: 1fr 1fr 1fr;
     grid-row-gap: 20px;
     width: 345px;
+    padding-top: 20px;
+
 
 }
 
@@ -186,7 +193,7 @@ main{
     justify-content: center;
     align-items: center;
     height: 145px;
-    width: calc(345px - 4px);
+    /* width: calc(345px - 4px); */
     background-color: white;
     border-radius: 10px;
     box-shadow: 0px 0px 12px gray;
@@ -197,11 +204,15 @@ main{
     flex-direction: column;
     width: 215px;
     height: auto;
+    padding: 10px;
+    color: black;
 }
 
 .section-populaires-img{
-    height: 140px;
-    width: 130px;
+    height: 135px;
+    width: 128px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
     object-fit: cover;
 }
 
