--- a/css/headerstyle.css
+++ b/css/headerstyle.css
@@ -9,12 +9,11 @@ body{
     margin: auto;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    max-width: 1440px;
 }
 
 header{
     display: flex;
-    /* max-width: 1340px;   */
 }
 
 #section-navigation{
