--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -4,15 +4,25 @@ main{
 }
 /* Section search */
 
+.padding-text{
+    padding: 20px 0px 20px 0px
+}
+
 #section-search{
     display: inline-flex;
     border: 1px solid #F2F2F2;
+    padding: 21px 0px 21px 0px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    border-style: none;
+
 }
 
+#form-search{
+    border-style: none;
+}
 .search-marker{
     background-color: #F2F2F2;
     padding: 15px;
@@ -168,7 +178,7 @@ main{
 
 .titre-populaire{
     display: flex;
-    width: 345px;
+    width: 100%;
     justify-content: space-between;
     align-items: center;
 }
