--- a/css/headerstyle.css
+++ b/css/headerstyle.css
@@ -9,14 +9,15 @@ body{
     margin: auto;
     display: flex;
     flex-direction: column;
+    align-items: center;
     max-width: 1440px;
 }
 
 #section-navigation{
     display: grid;
     grid-template-columns: 4fr 1fr 1fr 1fr;
-    height: 100px;
-    width: 1340px;
+    height: auto;
+    width: 100%;
     align-items: center;
 }
 
@@ -28,6 +29,10 @@ body{
 }
 
 /* propriétés link navigation */
+
+.hover-item {
+    padding: 37px;
+}
 
 .hover-item,a{
     color: #0065FC;
