--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -1,7 +1,9 @@
 
 main{
     max-width: 1340px;
+    width: 100%;
 }
+
 /* Section search */
 
 .padding-text{
@@ -23,11 +25,11 @@ main{
 #form-search{
     border-style: none;
 }
+
 .search-marker{
     background-color: #F2F2F2;
     padding: 15px;
-    font-size: 1rem;
- 
+    font-size: 1rem; 
 }
 
 .button-search{
@@ -52,7 +54,7 @@ main{
 #section-filtres-items{
     display: flex;
     flex-wrap: wrap;
-    width:  100%;
+    width: 100%;
     list-style: none;   
 }
 
@@ -84,6 +86,15 @@ main{
     font-weight: bold;
 }
 
+.section-filtres-title:hover{
+    cursor: pointer;
+    opacity: 0.5;
+}
+
+#information{
+    padding-bottom: 40px;
+}
+
 .info{
     display: flex;
     flex-direction: column;
@@ -98,7 +109,7 @@ main{
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-column-gap: 30px;
-    width: 1340px;
+    width: 100%;
 }
 
 #section-hebergement{
@@ -114,7 +125,7 @@ main{
     grid-template-rows: 1fr 1fr;
     grid-column-gap: 20px;
     grid-row-gap: 20px;
-
+    width: 100%;
 }
 
 .section-hebergement-item{
@@ -123,7 +134,6 @@ main{
     background-color: white;
     border-radius: 25px;
     box-shadow: 0px 0px 12px gray;
-
 }
 
 .section-hebergement-img{
@@ -150,7 +160,6 @@ main{
     z-index: 150;
     padding: 10px;
     color: black;
-
 }
 
 .hebergemnt-text-margin{
@@ -168,7 +177,7 @@ main{
 /* section populaires */
 
 #section-bloc-populaire{
-    width: 425px;
+    width: 100%;
     height: auto;
     padding: 40px;
     display: flex;
@@ -193,10 +202,8 @@ main{
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     grid-row-gap: 20px;
-    width: 345px;
+    width: 100%;
     padding-top: 20px;
-
-
 }
 
 .section-populaires-item{
@@ -205,11 +212,9 @@ main{
     justify-content: center;
     align-items: center;
     height: 145px;
-    /* width: calc(345px - 4px); */
     background-color: white;
     border-radius: 10px;
     box-shadow: 0px 0px 12px gray;
-
 }
 
 .section-populaire-texte{
@@ -222,7 +227,7 @@ main{
 
 .section-populaires-img{
     height: 135px;
-    width: 128px;
+    width: 125px;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     object-fit: cover;
@@ -234,7 +239,8 @@ main{
 #bloc-activites{
     padding-top: 20px;
     margin: auto;
-    max-width: 1340px;
+    /* max-width: 1340px; */
+    width: 100%;
 }
 
 #section-activites{
@@ -242,6 +248,7 @@ main{
     justify-content: space-between;
     padding: 25px 0px 60px 0px;
 }
+
 /* Section activites items grande vignette */
 /* Gestion du container parent
 */
@@ -263,6 +270,7 @@ main{
     flex-direction: column;
     justify-content: space-between;
 }
+
 .activites-item-pomegues{
     border-radius: 20px;
     width: 305px;
