Travail sur les détails du CSS

--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -36,9 +36,14 @@ main{
     background-color: #0065FC;
     border-style: none;
     color: white;
+    padding: 0 15px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 
+}
+
+.button-search i{
+    display: none;
 }
 
 /* Section filtres */
@@ -48,7 +53,6 @@ main{
     flex-wrap: wrap;
     width: 100%;
     align-items: center;
-
 }
 
 #section-filtres-items{
@@ -62,7 +66,6 @@ main{
     margin: 20px;
     position: relative;
     padding: 0px;
-
 }
 
 .section-filtres-icon{
@@ -71,7 +74,6 @@ main{
     padding: 15px;
     position: absolute;
     top: unset;
-
 }
 
 .fas{
@@ -244,7 +246,6 @@ main{
     padding-left: 5px;
 }
 
-
 /* Section Activités */
 
 #bloc-activites{
@@ -346,6 +347,3 @@ des doubles vignettes*/
     height: 156PX;
     z-index: 100;
 }
-
-/* Texte sous l'image */
-
