--- a/css/footerstyle.css
+++ b/css/footerstyle.css
@@ -2,16 +2,14 @@
 footer{
     background-color: #F2F2F2;
     font-size: 15px;
-    padding: 45px 0 50px 100px
+    padding: 50px 100px 50px 50px;
+
 }
 
 footer{
     display: flex;
+    justify-content: space-between;
     width: 100%;
-}
-
-footer div{
-    width: 100%;  
 }
 
 footer ul {
