--- a/css/mediastyle.css
+++ b/css/mediastyle.css
@@ -2,9 +2,10 @@
 
 @media screen and (max-width: 667px) {
 
-    header{
-        padding: 0px 15px;
+    header, main {
+        padding: 0px;
     }
+
 
     h2{
         padding: 50px 15px 30px 15px;
@@ -26,6 +27,11 @@
         padding: 40px;
         border-bottom: 4px solid lightgray;
     }
+
+    .hover-item a{
+        padding: 0;
+        margin: O;
+    }
     
     div.hover-item:focus, div.hover-item:hover{
         border-top: unset;
@@ -38,6 +44,9 @@
         order: 2;
         width: 50%;
         text-align: right;
+        padding-right: 15px;
+        justify-self: flex-start;
+        margin-top: 30px;
     }
 
     /* Item nav Hébergement */
@@ -58,6 +67,9 @@
     #section-navigation div:nth-child(1){
         order: 1;
         width: 50%;
+        padding-left: 15px;
+        margin-top: 30px;
+
     }
 
     /* Section recherche */
@@ -74,7 +86,8 @@
     }
 
     .button-search{
-        border-radius: 14px;
+        border-bottom-right-radius: 14px;
+        border-top-right-radius: 14px;
     }
 
     .button-search i{
@@ -171,11 +184,11 @@
 
 footer{
     flex-direction: column;
-    padding: 48px 0 0 0;
+    padding: 15px 0 0 0;
 }
 
     footer div{
-        margin: 0px 0 48px 28px;
+        margin: 0px 0 48px 4%;
     }
 
     footer ul li{
@@ -187,18 +200,18 @@ footer{
 
 /* Media sur tablette portrait*/
 
-@media screen and (min-width: 668px) and (max-width: 1024px){
+@media screen and (min-width: 668px) and (max-width: 1330px){
     
     header, main {
-        padding: 0px 25px;
+        padding: 0px 15px;
     }
 
-    header {
+    /* header {
         width: 100%;
-    }
+    } */
 
     h2{
-        padding: 50px 15px 30px 15px;
+        padding: 30px 0px;
     }
 
 /* Section hebergements */
@@ -210,7 +223,7 @@ footer{
 
     #section-hebergement{
         padding: 0;
-        margin: 25px 0;
+        margin: 0;
         order: 2;
         background-color: unset;
     }
@@ -223,7 +236,7 @@ footer{
 
     #section-bloc-populaire{
         width: 100%;
-        margin: 25px 0;
+        margin: 32px 0;
     }
 
     #section-populaires-items{
